# kafka-realtime-anomaly-detection

./: LICENSE  README.md  pyproject.toml
streaming/: slack_bot.py
