[tool.poetry]
name = "kafka-realtime-anomaly-detection"
version = "0.1.0"
description = "Realtime anormaly detection using kafka and python"
authors = ["UnplugCharger <isaacbyron@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
